# aistrale

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  check_async.py  docker-compose.yml  prometheus.yml
.agent/: README.md
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .env.example  Dockerfile  alembic.ini  main.py  migrate_chat.py  migrate_default_token.py  migrate_telemetry_tokens.py  pyproject.toml  test_inference_api.py
backend/alembic/: env.py
backend/alembic/versions/: 47f60d855c9e_add_project_and_permission_tables.py  5cc54ac1772d_initial_migration.py  7e070742e983_add_evaluation_tables.py  8d2f7c6a9b1e_add_webhooks_and_multi_provider_tables.py  a1b2c3d4e5f6_add_security_audit_table.py  c3a1b8e2d9f0_add_dlp_rule_table.py  de9c1517c9c5_add_cost_and_prompt_id_to_telemetry.py  df14438b2c5b_add_prompt_table.py  f1b539cd6b66_add_workspace_table.py  f6e5d4c3b2a1_add_encryption_key_management.py
backend/api/: admin.py  auth.py  compliance.py  cost.py  deps.py  dlp.py  evaluation.py  inference.py  multi_provider.py  permissions.py  projects.py  prompts.py  regions.py  reliability.py  security_audit.py  telemetry.py  tokens.py  users.py  webhooks.py  workspaces.py
backend/app/core/: encryption_middleware.py
backend/app/tests/: test_field_encryption.py  test_pii_detection.py
backend/core/: audit_logging.py  branding.py  config.py  database.py  exceptions.py  limiter.py  logging_config.py  metrics.py  region_middleware.py  scheduler.py  security.py  security_headers.py  tracing.py
backend/models/: __init__.py  chat.py  cost_optimization.py  dlp_rule.py  encryption_key.py  evaluation.py  multi_provider.py  permission.py  project.py  prompt.py  region.py  reliability.py  security_audit.py  telemetry.py  token.py  user.py  webhook.py  workspace.py
backend/scripts/: seed_data.py
backend/services/: ab_test_service.py  benchmark_service.py  circuit_breaker_service.py  comparison_service.py  compliance_service.py  cost_service.py  degradation_service.py  dlp_service.py  evaluation_service.py  failover_service.py  field_encryption_service.py  health_service.py  inference_service.py  key_rotation_service.py  load_balancer_service.py  model_abstraction_service.py  optimization_service.py  permission_service.py  pii_detection_service.py  pricing_service.py  prompt_service.py  quality_service.py  queue_service.py  region_service.py  reliability_benchmark_service.py  retry_service.py  routing_service.py  security_audit_service.py  webhook_service.py
backend/services/llm_providers/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  groq.py  huggingface.py  openai.py
backend/tests/: conftest.py  helpers.py  test_ab_test_service.py  test_benchmark_service.py  test_circuit_breaker.py  test_comparison_service.py  test_compliance_reporting.py  test_cost_service.py  test_degradation_service.py  test_dlp.py  test_failover_service.py  test_health_service.py  test_load_balancer.py  test_model_abstraction.py  test_optimization_service.py  test_quality_service.py  test_queue_service.py  test_rbac.py  test_region_controls.py  test_reliability_benchmark.py  test_retry_service.py  test_routing.py  test_webhook.py
backend/tests/integration/: test_api_integration.py  test_audit_remediation.py  test_provider_integration.py
backend/tests/unit/: test_api_admin.py  test_api_auth_audit.py  test_api_auth_comprehensive.py  test_api_auth_fixed.py  test_api_comprehensive_final.py  test_api_coverage_boost.py  test_api_deps_comprehensive.py  test_api_direct_coverage.py  test_api_endpoints_simple.py  test_api_final_coverage.py  test_api_inference_comprehensive.py  test_api_prompts_comprehensive.py  test_api_security_audit.py  test_api_security_audit_comprehensive.py  test_api_telemetry_comprehensive.py  test_api_telemetry_cost.py  test_api_tokens_comprehensive.py  test_api_users_comprehensive.py  test_audit_remediation_high_priority.py  test_audit_remediation_unit.py  test_auth.py  test_evaluation.py  test_huggingface_provider.py  test_inference_service.py  test_key_rotation.py  test_llm_providers.py  test_pricing_service.py  test_prompts.py  test_scheduler.py  test_security_audit.py
docker/: Dockerfile.prod  docker-compose.prod.yml
docs/: API.md  SKILL.md  comparison-langfuse.md
(+143 files in other folders)
